--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "appbase-js": "^0.11.1",
     "axios": "^0.16.1",
     "babel-plugin-transform-react-stateless-component-name": "^1.1.1",
+    "lodash": "^4.17.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "shebang-loader": "^0.0.1"
